--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --mode production",
     "dev": "webpack serve --mode development",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist --no-clean"
+    "deploy": "gh-pages -d dist"
   },
   "author": "TripleTen",
   "license": "ISC",
